# Fastapi-Template

./: .env.production  README.md  Readme.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.backup  .env.local  .gitignore  database.db  example_env.txt  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 279996fd2b37_init_3.py  e66520a666b9_postgre_init.py
backend/authentication/: auth.py
backend/core/: helperfunctions.py
backend/core/authentication/: auth.py
backend/core/cache/: rediscache.py
backend/core/database/: DB.py
backend/core/ratelimiter/: customratelimiter.py
backend/database/: DB.py
backend/database/cache/: rediscache.py
backend/database/cachelayer/: rediscache.py  t.py
backend/docker/: .dockerignore  Dockerfile
backend/models/: Auth_model.py  hero_model.py  todo_model.py
backend/ratelimiter/: customratelimiter.py
backend/routes/: auth_routes.py  heroes_routes.py  todo_routes.py
backend/services/: jwtdependencies.py
backend/src/: ControllerTemplate.py
backend/src/controllers/: auth_routes.py  todo_routes.py
backend/src/models/: todo_model.py
backend/templates/: RouteTemplate.py
backend/utils/: helperfunctions.py  jwtdependencies.py
docker_and_nginix_configurations/: .env.production  DOCKER.md  docker-compose.dev.yml  docker-compose.yml  env.production.example  nginx.conf
frontend/: frontend-readme.md
