[project]
name = "fastapi-tamplate"
version = "0.1.0"
description = "A Fullstack-FastApi template with all boilerplate Code and Configuration, including : 1. DataBase & ORM (SQLMODEL) 2. API (FASTAPI) 3. TypeSafety & MODEL (PYDANTIC) 4. Authentication (pyjwt)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.0",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
]
